# Module2

assignments/practice/: CMakeLists.txt  a.out  db.txt  dom_parser.cpp  output.json  problem1.sh  problem2.c  problem2.cpp  problem3.c  problem4.c
assignments/practice/examples/: dom_parser.cpp
assignments/summary/: CMake.md  CommonProblemsinC.md  ErrorHandlingSystemCalls.md  c-basics.md  linux-basics.md
