# Set the CMake minimum version
cmake_minimum_required(VERSION 3.5)

# Declare the Project version and the Language that the project is written in
project(problem3)
#  point your compiler to build with C++14
set(CMAKE_CXX_STANDARD 14)

add_executable(problem3 problem3.c)

# the program can be build and compiled through build directory

